--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Yu-Feng Huang, Ph.D - Personal Page</title>
+  <title>Yu-Chia Wang - Personal Page</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -28,68 +28,16 @@
 </head>
 <body>
 
-  <h1>Yu-Feng Huang, Ph.D / 黃鈺峰</h1>
+  <h1>Yu-Chia Wang / 王郁佳</h1>
   <p><strong>Email:</strong> 
-    yfhuang{at}saturn{dot}yzu{dot}edu{dot}tw; 
-    yfhuang{at}csie{dot}ntu{dot}edu{dot}tw; 
-    yfhuang{at}gmail{dot}com
+    s1121430@mail.yzu.edu.tw;
   </p>
-
-  <div class="section">
-    <h2>Research Social Network</h2>
-    <p>
-      <a href="#">Google Scholar</a> |
-      <a href="#">ResearchGate</a> |
-      <a href="#">LoopFrontiers</a> |
-      <a href="#">ORCID iD</a> |
-      <a href="#">GitHub</a> |
-      <a href="#">CV</a>
-    </p>
-  </div>
 
   <div class="section">
     <h2>Introduction</h2>
     <p>
-      Yu-Feng Huang obtained his Ph.D. in 2010 from the Department of Computer Science and Information Engineering at National Taiwan University, specializing in protein binding residue prediction. Following graduation, he continued his research in protein-DNA and protein-RNA binding site prediction as a Postdoctoral Researcher under his doctoral advisor.
+      A junior student in the Department of Computer Science at Yuan Ze University.
     </p>
-    <p>
-      In 2011, Yu-Feng joined Academia Sinica as a Postdoctoral Researcher in the laboratory of Dr. Kuo-Ping Chiu. He later transitioned to TOP Science Biotechnologies Inc. in 2021, a company founded by Dr. Chiu, where he continued his work as a Postdoctoral Researcher.
-    </p>
-    <p>
-      In July 2021, he joined ACT Genomics Inc. as a Senior Bioinformatics Engineer. His career progression at ACT Genomics was rapid: in July 2022, he was promoted to Manager of the Department of Applied Artificial Intelligence, and following a departmental reorganization in September 2022, he became Manager of the Department of Bioinformatics Innovation. By August 2023, he was promoted to Associate Director of the Division of Bioinformatics.
-    </p>
-    <p>
-      Demonstrating a strong commitment to innovation, Yu-Feng assumed the role of Innovation Project Lead in May 2024, focusing on the development of cutting-edge products. Most recently, in September 2024, he took on the position of Team Lead of the Bioinformatics Development Department, where he is responsible for delivering LDTS-grade pipelines to support assay development.
-    </p>
-    <p>
-      In August 2025, Yu-Feng joined the Department of Computer Science and Engineering at Yuan Ze University as an Assistant Professor, where he integrates his industry experience into academic research and education in bioinformatics and computational biology.
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>Research Interests</h2>
-    <ul>
-      <li>Big data analysis for next-generation sequencing (NGS)</li>
-      <li>Applications of NGS for biomarker identification, gene assembly, gene expression, cancer research, etc.</li>
-      <li>Bioinformatics / computational biology: applying IT to solve biological problems (sequence, structure, interaction analysis)</li>
-      <li>Data mining and machine learning, with applications in bioinformatics, medical informatics, and NGS</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Education</h2>
-    <ul>
-      <li><strong>Advanced Training</strong>, Bioinformatics and Comparative Genome Analysis, Institut Pasteur Paris (2010.7.5 ~ 2010.7.17)</li>
-      <li><strong>D.Sc.</strong>, Computer Science and Information Engineering, National Taiwan University (2003.9 ~ 2010.1)<br>
-        Advisors: Dr. Yen-Jen Oyang, Dr. Chien-Kang Huang<br>
-        Dissertation: A study of prediction of protein binding residues
-      </li>
-      <li><strong>M.Sc.</strong>, Computer Science, National Chung Cheng University (1999.9 ~ 2001.6)<br>
-        Advisor: Dr. Sun Wu<br>
-        Thesis: Personalized Information Subscription and Search
-      </li>
-      <li><strong>B.Sc.</strong>, Computer Science and Engineering, Yuan Ze University (1995.9 ~ 1999.6)</li>
-    </ul>
   </div>
 
 </body>
