--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <h1>Yu-Chia Wang / 王郁佳</h1>
   <p><strong>Email:</strong> 
-    s1121430@mail.yzu.edu.tw;
+    s1121430@mail.yzu.edu.tw
   </p>
 
   <div class="section">
